Added view and template for detailed blog post as well as CSS for the site.

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -17,10 +17,13 @@
       <div class="content container">
         <div class="row">
             <div class="col-md-12">
+              <h4> 電気使用料一覧</h4>
               {% block content %}
               {% endblock %}
             </div>
         </div>
+        <h3><a href="/admin">◆管理画面</a></h3>
       </div>
+
     </body>
 </html>
