--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,7 +1,7 @@
 {% extends 'blog/base.html' %}
 {% block content %}
-        <div class="post">
-            <table border="5" width="50%">
+        <div class="table">
+            <table border="4" width="100%" text-align="center">
               <tr>
                   <<th> 年月</th>
                   <<th> 空調使用量</th>
@@ -16,6 +16,7 @@
       {% endfor %}
             </table>
         </div>
+
             <!-- personのfirst_name,last_nameをそれぞれ表示  -->
 
 
