--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -41,6 +41,12 @@ h1, h2, h3, h4 {
     margin-bottom: 70px;
 }
 
+.table {
+    border: 4;
+    width: 100%;
+    text-align: center
+}
+
 .post h2 a, .post h2 a:visited {
     color: #000000;
 }
